--- a/13-TeV-examples/python/ATLAS_OpenData_13-TeV_python_full_HyyAnalysis_5min.ipynb
+++ b/13-TeV-examples/python/ATLAS_OpenData_13-TeV_python_full_HyyAnalysis_5min.ipynb
@@ -37,7 +37,8 @@
     "import os\n",
     "import ROOT\n",
     "from ROOT import TMath\n",
-    "import time"
+    "import time\n",
+    "from IPython import display"
    ]
   },
   {
@@ -433,10 +434,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now show the histogram."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<CENTER>\n",
     "    <h2> The two photons invariant mass </h2>\n",
-    "    <img src=\"atlas-demo-Hyy/atlas-outreach-cpp-framework-13tev/Plotting/histograms/hist_mYY_bin1.png\"  alt=\"mass\" width=\"700\" height=\"400\">\n",
     "</CENTER>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display.Image(\"./histograms/hist_mYY_bin1.png\")"
    ]
   },
   {
